[gd_scene load_steps=5 format=3 uid="uid://bcegxbbowrgt5"]

[ext_resource type="Theme" uid="uid://ymm1n4k8ahab" path="res://ui/ui_theme.tres" id="1_noo20"]
[ext_resource type="Script" uid="uid://bjlcr2w8r5nix" path="res://ui/day_notification_ui.gd" id="2_5jtyj"]

[sub_resource type="LabelSettings" id="LabelSettings_q23cf"]
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q23cf"]
bg_color = Color(1, 1, 1, 1)

[node name="DayNotificationUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_noo20")
script = ExtResource("2_5jtyj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 80.0
offset_right = 400.0
offset_bottom = 359.0
grow_horizontal = 2

[node name="DayTitle" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Day 1"
label_settings = SubResource("LabelSettings_q23cf")
horizontal_alignment = 1

[node name="HR" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 4)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_q23cf")

[node name="TimeTitle" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "8:00 AM - Restaurant opens in [color=#9999ff]1:00[/color]"
fit_content = true
horizontal_alignment = 1

[node name="Gap" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="InfoRichText" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]Expected customer rate[/b]: [color=#ffff99]10/hr[/color]
[b]Customer patience[/b]: [color=#ffff99]2hrs[/color]
[b]Order difficulties[/b]: [color=#99ff88]basic[/color], [color=#ff9988]advanced[/color]"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
